Fix minor alignment issue on console WHOIS page

--- a/console-webapp/src/app/settings/whois/whois.component.scss
+++ b/console-webapp/src/app/settings/whois/whois.component.scss
@@ -18,20 +18,20 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 10px;
-    min-width: 400px;
+    min-width: 460px;
   }
   &__section-address {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 5px;
-    min-width: 450px;
+    min-width: 400px;
     width: 50%;
     max-width: 50%;
   }
   &__section-description {
     display: inline-block;
     margin-block-start: 1em;
-    min-width: 150px;
+    width: 160px;
   }
   &__section-form {
     display: inline-block;
